--- a/gb/20/1/12/n11786635.md
+++ b/gb/20/1/12/n11786635.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fcjmkl2375/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/fcjmkl2375/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fcjmkl2375/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>台湾人从海外回乡 用选票向中共传递何信息</h2>
-<img width="600" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NM23Q-1-600x400.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/000_1NM23Q-1-600x400.jpg" />
 <h6>当地时候1月11日晚，台湾大选蔡英文以压倒性优势顺利连任总统。国际媒体和专家表示，本次选举体现出台湾民众对中共日益嚣张威权主义的拒绝。图为排队投票的台湾民众。 (Photo by Sam Yeh / AFP)
 </h6>
 <hr>
-<p>【大纪元2020年01月12日讯】（大纪元记者许祯祺综合报导）当地时候1月11日晚，<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E5%A4%A7%E9%80%89.md">台湾大选</a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md">蔡英文</a>以压倒性优势顺利连任总统。专家表示，本次选举体现出台湾民众对中共日益嚣张威权主义的拒绝，也是在向中共专制说“不”。选举结果对中共而言是巨大挫败。</p>
-<p>成千上万的台湾从世界各地返回家乡，参加周六的<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E5%A4%A7%E9%80%89.md">台湾大选</a>投票。选举结果显示，民进党2020大选总统、立委双赢。<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md">蔡英文</a>以817万231票大赢对手韩国瑜近265万票，顺利连任，一举打破前总统马英九在2008年拿下765万余票的纪录。民进党提名候选人还在区域斩获46席，原住民2席，不分区斩获13席，确定可单独过半，二度完全执政。</p>
+<p>【大纪元2020年01月12日讯】（大纪元记者许祯祺综合报导）当地时候1月11日晚，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E5%A4%A7%E9%80%89.md#1">台湾大选</a><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>以压倒性优势顺利连任总统。专家表示，本次选举体现出台湾民众对中共日益嚣张威权主义的拒绝，也是在向中共专制说“不”。选举结果对中共而言是巨大挫败。</p>
+<p>成千上万的台湾人从世界各地返回家乡，参加周六的<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E5%A4%A7%E9%80%89.md#1">台湾大选</a>投票。选举结果显示，民进党2020大选总统、立委双赢。<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>以817万231票大赢对手韩国瑜近265万票，顺利连任，一举打破前总统马英九在2008年拿下765万余票的纪录。民进党提名候选人还在区域斩获46席，原住民2席，不分区斩获13席，确定可单独过半，二度完全执政。</p>
 <p>在2018年九合一选举中，民进党遭受重大损失，蔡英文这次获胜得益于台湾经济的缓慢改善，对手的失误，以及香港大规模抗议活动，让许多台湾年轻人意识到若是遭到北京统治可能面临的未来。</p>
 <p>中共越来越多的恐吓也帮助了蔡英文。在大选前夕，中共军队航母曾驶过台湾海峡。北京当局去年在对台湾发表讲话时说，北京不排除使用武力将台湾置于其权威之下。</p>
 <p>《卫报》则报导，11月亲民主候选人在香港区议会竞选中取得压倒性胜利也是帮助蔡英文获胜的另一个因素。</p>
@@ -22,7 +22,7 @@
 <p>她说：“这是对中国（中共）吞并或影响台湾企图的拒绝。”</p>
 <p>“这次选举结果具有更大的意义，表明当我们的主权和民主受到威胁时，台湾人民会用更大的声音，喊出我们的坚持。”蔡英文在胜选后说。</p>
 <p>美国前国安顾问约翰?博尔顿（John Bolton）表示，“这是给中国（中共）的一个教训：不要干涉台湾或美国的选举！”</p>
-<figure id="attachment_11786757" style="width: 600px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2020/01/000_1NM24W-2.jpg"><img class="size-large wp-image-11786757" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NM24W-2-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">蔡英文的胜利对中共来说不仅尴尬，而且是一个巨大的挫败。(Photo by Sam Yeh / AFP)</figcaption></figure>
+<figure id="attachment_11786757" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/01/000_1NM24W-2.jpg"><img class="size-large wp-image-11786757" src="https://i.epochtimes.com/assets/uploads/2020/01/000_1NM24W-2-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">蔡英文的胜利对中共来说不仅尴尬，而且是一个巨大的挫败。(Photo by Sam Yeh / AFP)</figcaption></figure>
 <h2>台湾人为什么排除万难回家投票</h2>
 <p>台湾中央选举委员会7日公布，本次总统选举登记选民超过1931万人，年龄层分布，以40至49岁居冠，共有374万3492人，其次为50至59岁，有363万2972人。最年轻的20至29岁选举人数有311万9456人，30至39岁有354万9620人（两者相加将近667万人），60至69岁有303万5169人，70至79岁则有141万806人。</p>
 <p>这次投票吸引了大批台湾选民参加，成千上万人专程从国外赶回投票。他们普遍认为，这次的选举将决定台湾是否将延续民主自由的道路。</p>
@@ -35,7 +35,7 @@
 <p>“我希望台湾不要最后变成香港那样，因为我的孩子们20年后得要走上街头去反对共产党。” Hsu说。</p>
 <p>现年20岁、住在台北的首次投票人Stracy Lin对路透社说：“我看到了香港正在发生的事情，这太可怕了。我只是想确保我将来有投票的自由。”</p>
 <p>蔡英文选后表示：“这次选举是关于我们是否选择自由与民主的事情。”“我们必须努力维护国家安全和捍卫主权。”</p>
-<figure id="attachment_11786758" style="width: 600px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2020/01/000_1NM24X.jpg"><img class="size-large wp-image-11786758" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NM24X-600x900.jpg" alt="" width="600" b="900" /></a><figcaption class="wp-caption-text">这次投票吸引了大批台湾选民参加，成千上万人专程从国外赶回投票。他们普遍认为，这次的选举将决定台湾是否将延续民主自由的道路。 (Photo by Sam Yeh / AFP)</figcaption></figure>
+<figure id="attachment_11786758" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/01/000_1NM24X.jpg"><img class="size-large wp-image-11786758" src="https://i.epochtimes.com/assets/uploads/2020/01/000_1NM24X-600x900.jpg" alt="" width="600" b="900" /></a><figcaption class="wp-caption-text">这次投票吸引了大批台湾选民参加，成千上万人专程从国外赶回投票。他们普遍认为，这次的选举将决定台湾是否将延续民主自由的道路。 (Photo by Sam Yeh / AFP)</figcaption></figure>
 <h2>台湾大选结果对大陆和香港有何影响</h2>
 <p>蔡英文在胜选后说：“我相信香港的朋友，会为我们今晚的集体决定感到高兴。”</p>
 <p>著名民主运动人士黄之锋在推特上说，蔡英文的胜利对香港人来说是一个“宝贵的时刻”。他说：“今天是大多数台湾人选择命运，捍卫民主和自由的一天，最重要的是，对中共的独裁统治说不。”</p>
@@ -48,41 +48,46 @@
 
 <hr>
 
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/20/1/12/n11786635.htm">台湾人从海外回乡 用选票向中共传递何信息</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/11/n11785613.htm">美参议员：中共威胁和干预台湾大选被挫败</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/11/n11785677.htm">蓬佩奥贺蔡英文胜选：台湾再彰显民主力量</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/11/n11785661.htm">年轻人捍卫台湾民主 助蔡英文总统高票连任</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11767539.htm">中共否认上海监狱奴工事件 专家批惯常撒谎</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11767134.htm">蔡英文去空军第一雷达分队 完成总长未竟旅程</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/3/n11766426.htm">习近平与林郑新年致辞有难言之隐？专家解读</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/3/n11766058.htm">反渗透法高票通过背后 反对声雷声大雨点小</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/11/26/n8531007.htm">台湾法轮功7千人法会 李洪志大师发贺词</a></li>
-> <li><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11786268.md">英美加欧日政要和各界贺蔡英文 赞台湾民主</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/11/n11783658.htm">【更新】蔡英文破817万票 民进党立委过半</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/6/n11772884.htm">【直播】蔡英文高票连任 名家点评胜选关键</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/11/n11785564.htm">政坛新秀狙击资深老将 台立委选战5大惊奇</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/11/n11786063.htm">【拍案惊奇】蔡英文连任！北京的三层误判</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11745420.htm">北京北新桥锁龙井里真有龙吗？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/3/n11765864.htm">?美国四位总统的神异经历</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/8/n11776359.htm">简化汉字“圣”包藏什么祸心？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/6/n11772993.htm">【历史回眸】惊世灾难是怎样被中共抹去的</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/10/n11782674.htm">美对伊朗祭新制裁 中国企业上榜被冻结资产</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/10/n11782236.htm">返乡潮首日大陆无防护 武汉火车站零防疫</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/10/n11781279.htm">【翻墙必看】中南海官员透露中共高层秘密</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/10/n11782943.htm">【新闻看点】美中贸谈第2阶段上路？关税成常态</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/10/n11781010.htm">【拍案惊奇】伊朗导弹是元凶 德黑兰坠机记实</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/10/n11782698.htm">【专访】王定宇：台湾大选牵动美中台关系（下）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/9/n11778706.htm">澳洲野火肆虐 鳄鱼先生一家救下9万只动物</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/9/n11780581.htm">46秒影片催人泪下 杜汶泽吁台湾人珍惜投票权</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/10/n11783413.htm">黄秋生下周舌战何君尧 杜汶泽幽默分享经验</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/9/n11780326.htm">晒与母亲合照宣传新片 徐峥不再以光头示人</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/10/n11782930.htm">黄渤饰教练引争议 《中国女排》或无缘新年档</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/11/n11785613.md#1">美参议员：中共威胁和干预台湾大选被挫败</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/11/n11785677.md#1">蓬佩奥贺蔡英文胜选：台湾再彰显民主力量</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/11/n11785661.md#1">年轻人捍卫台湾民主 助蔡英文总统高票连任</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/4/n11767539.md#1">中共否认上海监狱奴工事件 专家批惯常撒谎</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/4/n11767134.md#1">蔡英文去空军第一雷达分队 完成总长未竟旅程</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/3/n11766426.md#1">习近平与林郑新年致辞有难言之隐？专家解读</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/3/n11766058.md#1">反渗透法高票通过背后 反对声雷声大雨点小</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/11/26/n8531007.md#1">台湾法轮功7千人法会 李洪志大师发贺词</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11786635.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fcjmkl2375/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fcjmkl2375/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935263.md#1">澳医学协会西澳主席：学校将关闭</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/30/n11225005.md#1" target="_blank">林辉：中共高规格接待蒙古独裁者背后的丑行</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/8/n11172214.md#1" target="_blank">只做了这一件事 他们绝处逢生（一）</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943372.md#1">“回国避疫”和“中国式撤侨”的真相</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942860.md#1">【最新疫情3.16】旧金山地区700万人居家防疫</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">被扒皮的法官</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940769.md#1">【新闻看点】病毒来自哪里？川普：中美都知道</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11941017.md#1">【现场视频】东莞虎门镇现大量防暴警察</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945531.md#1">武汉人斥官员：给你改正机会 谁给我活命机会</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11941216.md#1">【一线采访视频版】封城近50天 武汉人生活困苦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943288.md#1">古巨基宣布当爸 晒宝宝合照分享喜悦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943213.md#1">又一好莱坞明星确诊 007邦女郎隔离在家</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/12/n11786635.htm">台湾人从海外回乡 用选票向中共传递何信息</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/1/12/n11786635.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
